fix(STN-507): carousel and page hero spacing

--- a/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.general.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.general.scss
@@ -31,6 +31,8 @@
 .ptype-hs-hero-image,
 .ptype-hs-spotlight,
 .ptype-hs-banner,
+.ptype-hs-carousel,
+.field-hs-page-hero,
 .ptype-hs-row,
 .ptype-hs-view {
   width: 100%;
